--- a/package.json
+++ b/package.json
@@ -4,6 +4,22 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "hpp": "^0.2.3"
+    "hpp": "^0.2.3",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/node": "^7.20.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.21"
+  },
+  "scripts": {
+    "dev" : "nodemon ./server.js --exec babel-node"
   }
+
 }
